# paynet

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ETHEREUM_INTEGRATION.md  LICENSE  OBSERVABILITY.md  STAGING.md  USAGE.md  docker-compose.app-mock.yml  docker-compose.app-sepolia.yml  docker-compose.app.yml  docker-compose.ci-testnet-ethereum.yml  docker-compose.ci-testnet-starknet.yml  docker-compose.ci-testnet.yml  docker-compose.ci.yml  docker-compose.ethereum.yml  docker-compose.localnet-1-prep.yml  docker-compose.localnet-2-genesis.yml  docker-compose.localnet-3-init.yml  docker-compose.localnet-4-run.yml  docker-compose.localnet-ethereum.yml  docker-compose.localnet-genesis.yml  docker-compose.localnet-node.yml  docker-compose.mock.yml  docker-compose.testnet-ethereum.yml  docker-compose.testnet-starknet.yml  docker-compose.testnet.yml  docker-compose.yml  localhost:127.0.0.1  package-lock.json
.env.example/: node.env.example  signer.env.example  starknet-cashier.env.example
.helix/: languages.toml
.sqlx/: query-062a7cd84ea839549107e3233e92b466e5b310fe6ee7d6b4fcf8977a698d375e.json  query-133bc8e8b081a7cb27321c0b66e4ed07ff83655f9c3ed13e26f8365b7b31baa6.json  query-15c35a8b8938e19907af809cb26a478087181caebf8a649ac1ae9eb8570178d7.json  query-160b52a6608eb9dd5da8170c2b581a7de34c0795f2f60a310f6bb41326a71f82.json  query-1ca1606a6d699ae65e6056cc8f4de69fa7e1fbe29bbc8e8cfab35aae03a5e5ed.json  query-2a2415e7cfa8e9437b863fcb7e63862aef2ce2b5836e42777e4f7a1aa7ee5cde.json  (+9 more)
cert/: node.crt  node.key  signer.crt  (+3 more)
crates/bins/eth-on-chain-setup/: Cargo.toml
crates/bins/eth-on-chain-setup/src/: main.rs
crates/libs/db-node/: Cargo.toml
crates/libs/db-node/db/migrations/: 20250806065243_create_ethereum_melt_payment_event.down.sql  20250806065243_create_ethereum_melt_payment_event.up.sql
crates/libs/db-node/db/migrations/crates/libs/db-node/db/migrations/: 20250601000000_add_pubkey_to_mint_quote.up.sql
crates/libs/db-node/db/migrations/crates/libs/db-node/db/migrations/crates/libs/db-node/db/migrations/: 20250601000000_add_pubkey_to_mint_quote.down.sql
crates/libs/db-node/src/: insert_blind_signatures.rs  lib.rs  mint_quote.rs  proof.rs  substream_handlers.rs
crates/libs/ethereum/liquidity-source/: Cargo.toml
crates/libs/ethereum/liquidity-source/src/: indexer.rs  init.rs  lib.rs
crates/libs/ethereum/liquidity-source/src/deposit/: mock.rs  mod.rs
crates/libs/ethereum/liquidity-source/src/withdraw/: mock.rs  mod.rs
crates/libs/ethereum/substreams-sink/: Cargo.toml  build.rs
crates/libs/ethereum/substreams-sink/src/: lib.rs  parse_inputs.rs  substreams_stream.rs
crates/libs/ethereum/substreams-sink/src/pb/: invoice_contract.v1.rs  mod.rs  sf.substreams.ethereum.v1.rs
crates/libs/ethereum/types/: Cargo.toml
crates/libs/ethereum/types/src/: assets.rs  chain_id.rs  constants.rs  lib.rs  unit.rs
crates/libs/starknet/substream/: Cargo.toml  README.md  substreams.yaml
crates/libs/starknet/substream-sql/: Cargo.toml  substreams.yaml
crates/libs/starknet/substream-sql/src/: lib.rs
crates/libs/starknet/substream-sql/src/pb/: mod.rs
crates/libs/starknet/substream/src/: lib.rs
crates/libs/starknet/substream/src/abi/: mod.rs
crates/libs/starknet/substream/src/pb/: starknet.v1.rs
crates/libs/starknet/substreams-sink/: Cargo.toml  buf.gen.yaml  build.rs
crates/libs/starknet/substreams-sink/src/: lib.rs  parse_inputs.rs  substreams.rs  substreams_stream.rs
crates/libs/starknet/substreams-sink/src/pb/: mod.rs  pb.rs  sf.substreams.sink.sql.v1.rs  sf.substreams.starknet.type.v1.rs  starknet.v1.rs
crates/libs/substreams-lib/: Cargo.toml
crates/libs/substreams-lib/src/: lib.rs  parse_inputs.rs  stream.rs
crates/libs/substreams-lib/src/pb/: mod.rs
crates/libs/substreams-streams/: Cargo.toml
crates/libs/substreams-streams/src/: lib.rs  parse_inputs.rs  stream.rs
crates/libs/substreams-streams/src/pb/: mod.rs
crates/libs/wallet/: Cargo.toml
crates/libs/wallet/src/: lib.rs  melt.rs  mint.rs  node.rs  rest.rs  seed_phrase.rs  send.rs  sync.rs  wad.rs  wallet.rs
crates/libs/wallet/src/clients/: grpc.rs  mod.rs
crates/libs/wallet/src/db/: keyset.rs  melt_quote.rs  mint_quote.rs  mod.rs  node.rs  proof.rs  wad.rs  wallet.rs
crates/libs/wallet/src/errors/: mod.rs
crates/libs/wallet/src/sync/: melt_quotes.rs  mint_quotes.rs  mod.rs  wads.rs
crates/libs/wallet/src/types/: compact_wad.rs  mod.rs
crates/libs/wallet/src/wallet/: mod.rs  sqlite.rs
crates/liquidity-source/: Cargo.toml
crates/liquidity-source/src/: deposit.rs  lib.rs  mock.rs  starknet.rs  withdraw.rs
crates/liquidity-source/src/starknet/: deposit.rs
crates/open-telemetry-tracing/: Cargo.toml
crates/open-telemetry-tracing/src/: lib.rs
crates/substreams/ethereum/: Cargo.toml  README.md  build.rs  substreams.yaml
crates/substreams/ethereum/abi/: invoice_contract.abi.json
crates/substreams/ethereum/firehose/: firehose-ethereum.yaml
crates/substreams/ethereum/proto/: invoice_contract.proto
crates/substreams/ethereum/src/: lib.rs
crates/substreams/ethereum/src/abi/: invoice_contract.rs  mod.rs
crates/substreams/ethereum/src/pb/: .last_generated_hash  mod.rs
mobile/salto/src-tauri/: Cargo.toml  Entitlements.plist  Info.ios.plist  Info.plist  macOS_distribution.provisionprofile  tauri.appstore.conf.json  tauri.conf.json
mobile/salto/src-tauri/capabilities/: default.json  macos.json  mobile.json
mobile/salto/src-tauri/icons/: icon.icns
mobile/salto/src-tauri/src/: background_tasks.rs  connection_cache.rs  errors.rs  front_events.rs  lib.rs  migrations.rs  mint_quote.rs  quote_handler.rs
mobile/salto/src-tauri/src/app_state/: connection_cache.rs  mod.rs
mobile/salto/src-tauri/src/commands/: add_node.rs  deposit.rs  get_nodes_balance.rs  get_prices.rs  mod.rs  node.rs  prices_provider.rs  wad.rs  wallet.rs  withdraw.rs
mobile/salto/src-tauri/src/commands/wad/: create.rs  history.rs  receive.rs
mobile/salto/src-tauri/src/front_events/: balance_events.rs  melt_quote_events.rs  mint_quote_events.rs  mod.rs  price_events.rs  wad_events.rs
(+404 files in other folders)
