[package]
name = "substreams-streams"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tonic = { version = "0.12", features = ["gzip", "tls-roots"] }
