[package]
name = "ethereum-invoice-substream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
hex = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
