[package]
name = "salto"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "salto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { workspace = true, features = ["tracing"] }
tauri-plugin-opener = { workspace = true }
tauri-plugin-sql = { workspace = true, features = ["sqlite"] }
tauri-plugin-log = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }

# Serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# db
rusqlite = { workspace = true }
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }

# Others
thiserror = { workspace = true }
primitive-types = { workspace = true }
num-traits = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio = { workspace = true }
bitcoin = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }
urlencoding = { workspace = true }
futures = { workspace = true }

# Local
node-client = { workspace = true }
starknet-types = { workspace = true }
nuts = { workspace = true }
parse-asset-amount = { workspace = true }
starknet-liquidity-source = { workspace = true }

# Keyring
[target.'cfg(target_os = "android")'.dependencies]
android-keyring = { workspace = true }

# Camera check
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2.3.0"

# Mobile
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
wallet = { workspace = true, features = ["mobile"] }

# Desktop
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
wallet = { workspace = true, features = ["desktop"] }

[features]
tls-local-mkcert = []
