[package]
name = "ethereum-liquidity-source"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
bitcoin_hashes = { workspace = true }

# Local dependencies
liquidity-source = { workspace = true }
nuts = { workspace = true }
ethereum-types = { path = "../types" }

# Ethereum specific dependencies
ethers = "2.0"
primitive-types = { workspace = true }

[features]
default = []
mock = []
