[package]
name = "eth-substreams-sink"
version = "0.1.0"
edition = "2024"

[dependencies]
http = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
tonic = { version = "0.12", features = ["gzip", "tls-roots"] }
futures = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
primitive-types = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "chrono"] }

# local
nuts = { workspace = true }
eth-types = { workspace = true }
db-node = { workspace = true }
ethers = { workspace = true }
web3 = { workspace = true }
hex = { workspace = true }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
