[package]
name = "ethereum-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
primitive-types = { workspace = true }
nuts = { workspace = true }
phf = { workspace = true }

# Ethereum specific dependencies
ethers = "2.0"
