[package]
name = "eth-types"
version = "0.1.0"
edition = "2024"

[dependencies]
nuts = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true }
primitive-types = { workspace = true }
phf = { workspace = true, features = ["macros"] }
bitcoin_hashes = { workspace = true }
tracing = { workspace = true }

# Local deps
ethers = { workspace = true }
web3 = { workspace = true }
hex-literal = { workspace = true }
