[package]
name = "substream-paynet"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex-literal = "0.3.4"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }

starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "2ddc694" }
starknet-types-core = { git = "https://github.com/starknet-io/types-rs", rev = "f98f048" }
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.0", features = [
    "abigen-rs",
] }
serde_json = "1.0.128"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }

[build-dependencies]
anyhow = "1"
regex = "1.8"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.0", features = [
    "abigen-rs",
] }
